RESOLVED FIXED288875
[UnifiedPDF] [iOS] Web process hangs the first time a pointing device is hovered over text annotations
https://bugs.webkit.org/show_bug.cgi?id=288875
Summary [UnifiedPDF] [iOS] Web process hangs the first time a pointing device is hove...
Abrar Rahman Protyasha
Reported 2025-02-28 14:37:29 PST
Attachments
Radar WebKit Bug Importer
Comment 1 2025-02-28 14:37:41 PST
Abrar Rahman Protyasha
Comment 2 2025-02-28 14:38:40 PST
Abrar Rahman Protyasha
Comment 3 2025-02-28 14:46:56 PST
EWS
Comment 4 2025-02-28 17:35:43 PST
Committed 291410@main (2809f525060e): <https://commits.webkit.org/291410@main> Reviewed commits have been landed. Closing PR #41671 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.